fix: images too large

--- a/site/docs/stylesheets/preview.css
+++ b/site/docs/stylesheets/preview.css
@@ -53,15 +53,19 @@ All styles must use !important to override the styles generated by Material for 
   margin-right: 0 !important;
 }
 
-.preview__wrapper .preview__image {
+.preview__item a.glightbox {
   flex: 1 !important;
-  height: 100% !important;
-  width: auto !important;
-  max-width: none !important;
+  height: 90% !important;
   display: block !important;
   margin: 0 !important;
   padding: 0 !important;
   border: none !important;
+}
+
+.preview__wrapper .preview__image {
+  height: 100% !important;
+  width: auto !important;
+  max-width: none !important;
   object-fit: contain !important;
   min-height: 0 !important;
 }
